# stopeight-clibs

./: .gitmodules  CMakeLists.txt  Includes.cmake  InstallHeaders.cmake  LICENSE  Package.cmake  README.md  Versioning.cmake  __init__.py
analyzer/: CMakeLists.txt  analyzer.cpp  analyzer.h  analyzer.pro  analyzer_global.h  interfacepython.cpp  turns.cpp  turns.h  windowshack.h
analyzer-wrappers/: CMakeLists.txt  IFPyAnalyzer.cpp  analyzer-wrappers.pro  analyzer-wrappers_global.h  analyzerwrappers.cpp  analyzerwrappers.h  interfacepython.cpp  interfacepython.h  setup.py  windowshack2.h
analyzer/include/: Matrix.h  algo.cpp  algo.h  analyzer_global.h  error.h  grapher.h  single_task.h  test.h
analyzer/python/: CMakeLists.txt  IFPyAnalyzer.cpp
analyzer/src/: Matrix.cpp  algo.cpp  algo_impl.h  grapher.cpp  grapher_impl.h  single_task.cpp  test.cpp
analyzer/stopeight-clibs-analyzer/: analyzer.h  stopeight-clibs-analyzer.vcxproj
conda.recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
etc/: anaconda-upload-environment.yml  conda-build-environment.yml  example-environment.yml
grapher/: CMakeLists.txt  Matrix.cpp  algo.cpp  algo_gpx.cpp  algo_impl.h  containers.cpp  containers.h  dummy.h  grapher.cpp  grapher.vcxproj  grapher_gpx.cpp  grapher_impl.h  mean.cpp  mean_impl.h
grapher-wrappers/: CMakeLists.txt  IFPyGrapher.cpp  IFPyMatrix.cpp  interfacepython.cpp
grapher/grapher.xcodeproj/: project.pbxproj
grapher/mac/: grapher.cpp  grapher.hpp  grapherPriv.hpp
grapher/python/: CMakeLists.txt  IFPyGrapher.cpp
legacy/: CMakeLists.txt  dpoint.cpp  dpoint.h  legacy.h  legacy.pro  listbase.cpp  listbase.h
legacy-wrappers/: CMakeLists.txt  IFPyFinders.cpp  IFPyGetters.cpp  IFPyShared.cpp  IFPyShared.h  interfacepython.cpp  interfacepython.h  legacy-wrappers.pro  legacy-wrappers_global.h  legacywrappers.cpp  legacywrappers.h  setup.py
legacy/include/: analyzer.h  areaanalyzer.h  areacalculator.h  areanormalizer.h  calculator.h  cliffs.h  cliffsanalyzer.h  cliffscalculator.h  cliffsnormalizer.h  corneranalyzer.h  cornercalculator.h  cornernormalizer.h  corners.h  dpoint.h  editorbase.h  editorcliffs.h  editorinterface.h  editorspirals.h  error.h  layerrender.h  legacy_export.h  legacy_global.h  listbase.h  listcopyable.h  listinitializer.h  listiteration.h  listrotator.h  listswitchable.h  myreal.h  render.h  spirals.h  spiralsanalyzer.h  spiralscalculator.h  straightsanalyzer.h  straightscalculator.h  straightsnormalizer.h  turnanalyzer.h  turncalculator.h  turnnormalizer.h  turns.h
legacy/python/: CMakeLists.txt  IFPyFinders.cpp  IFPyGetters.cpp  IFPyShared.cpp  IFPyShared.h  interfacepython.cpp
legacy/src/: analyzer.cpp  areaanalyzer.cpp  areacalculator.cpp  areanormalizer.cpp  calculator.cpp  cliffs.cpp  cliffsanalyzer.cpp  cliffscalculator.cpp  cliffsnormalizer.cpp  corneranalyzer.cpp  cornercalculator.cpp  cornernormalizer.cpp  corners.cpp  dpoint.cpp  editorbase.cpp  editorcliffs.cpp  editorspirals.cpp  layerrender.cpp  legacy.cpp  listbase.cpp  listcopyable.cpp  listinitializer.cpp  listiteration.cpp  listrotator.cpp  listswitchable.cpp  myreal.cpp  render.cpp  spirals.cpp  spiralsanalyzer.cpp  spiralscalculator.cpp  straightsanalyzer.cpp  straightscalculator.cpp  straightsnormalizer.cpp  turnanalyzer.cpp  turncalculator.cpp  turnnormalizer.cpp  turns.cpp
legacy/tests/stage3-build04-authWorking/: almostStraightLeg.sp  missingcorners.sp  multis.sp  quickspiral.sp  strangeline.sp  strangesadface.sp  toomanycorners.sp
legacy/tests/stage3-build10/: 1.sp  2.sp  linetest.sp  scratch.sp  test.sp
legacy/tests/stage3-build12-deploy1/: 0crests.sp  7spiral.sp  S_problem_straight.sp  cliff_too_far.sp  corners_ok_turns_bad.sp  crest_in_between.sp  early_cutoff.sp  fake_s.sp  heighted_test.sp  paraplushyper.sp  perfect_O.sp  perfect_spiral.sp  proof_false.sp  renderBug.sp  scalar_or_minimum.sp  smoothing.sp  spiral.sp  spiral_after_lookahead.sp  spiral_minimum_length.sp  too_many_corners.sp  too_short_scalar.sp  toomanycliffs.sp  undetected_crest.sp  weird_scalar.sp  wobbly.sp
legacy/tests/stage3-build12-deploy1-2/: another_corner_too_much.sp  crest_late.sp  crest_too_early_subdivision.sp  latecrest.sp  much_too_many_corners.sp  not_enough_cliffs.sp  not_enough_crests.sp  one_corner_too_much.sp  sinus_three_cliffs_one_corner.sp  super_late_crest.sp  too_many_corners.sp
legacy/tests/stage3-build12-deploy1-3/: corner_baloney.sp  corner_line_problem.sp  fix_turn.sp  fix_turn2.sp  meant_to_be_2_corners.sp  verdreht.sp  very_early_flat_turn.sp
legacy/tests/stage3-build12-deploy1-4/: calibrate_me.sp  crest_way_too_late.sp  found_a_cliff.sp  one_cliff_should_be_three.sp  one_corner_too_much_in_segment_3.sp  spiral_too_many_cliffs.sp  this_should_really_be_a_crest.sp  wavelet.sp  where_are_the_corners.sp  where_s_the_end.sp
legacy/tests/stage3-build12-deploy1-5/: jittery_spiral.sp  way_too_many_cliffs.sp
legacy/tests/stage3-pre08/: 1point.sp  lastSpiralSection.sp  sinusMissingCorners.sp  sinusMove.sp  strangematch.sp
legacy/tests/stage3-pre08/SadFace/: mingledCorners.sp
legacy/tests/stage3-pre09/: badturn.sp  halfcircle.sp  longline.sp  stranges.sp  stranges2.sp  sturn.sp  turn.sp  wave.sp
legacy/tests/stage3-pre10/: d.sp  m.sp  p.sp
legacy/tests/stage4-cornerMeasuring/: 71preceding0Area.sp  backconverttest.sp  daKilla.sp  inconsistency.sp  longkilla.sp  narrowCircle.sp  penSpiral.sp  risingAreas.sp  straightLine.sp  typicalOverhang.sp
legacy/tests/stage4-spirals/: abbreviation.sp  bigCircle.sp  eggo.sp  fastFullCircle.sp  fastspiral.sp  muchTooBig.sp  perfectSpiral.sp  reverse.sp  splunky.sp
matrix/: CMakeLists.txt  Matrix.cpp
matrix-wrappers/: CMakeLists.txt  IFPyMatrix.cpp
matrix/matrix/: matrix.vcxproj
matrix/python/: CMakeLists.txt  IFPyMatrix.cpp
matrix/stopeight-clibs-matrix/: Matrix.h
shared-include/: DMALoader.h  Matrix.cpp  Matrix.h  algo.h  angle_functions.cpp  angle_functions.h  containers.cpp  containers.h  grapher.h  iterators.h  mean.h  preloaderif.cpp  preloaderif.h  shared_types.cpp  shared_types.h
(+29 files in other folders)
